drivers_LTLIBRARIES = libgphoto_konica_qm100.la

CFLAGS = @GTK_CFLAGS@

libgphoto_konica_qm100_la_SOURCES = konica_qm100.c getPicInfo.c \
	transmission.c lowlevel.c getStatus.c close.c savePic.c saveThumb.c \
	erasePic.c formatCF.c takePic.c error.c setSpeed.c open.c \
	konica_qm100.h getPicInfo.h \
	transmission.h lowlevel.h getStatus.h close.h savePic.h saveThumb.h \
	erasePic.h formatCF.h takePic.h error.h setSpeed.h open.h defs.h

libgphoto_konica_qm100_la_LDFLAGS = -version-info 0:0:0
